# empiar-cets

./: README.md  pyproject.toml
definition_files/czii/: empiar_12104.yaml
definition_files/tomobabel/: empiar_12104.yaml
empiar_cets/: cets_object_utils.py  cli.py  empiar_utils.py  metadata_models.py  metadata_parsing.py  yaml_parsing.py
empiar_cets/cets/: dataset.py
empiar_cets/cets/czii/: alignment.py  movie_stack_collections.py  region.py  tilt_series.py  tomogram.py
empiar_cets/cets/tomobabel/: dataset.py  movie_stack_set.py  region.py
